--- a/DeepFakes/bibliography.bib
+++ b/DeepFakes/bibliography.bib
@@ -15,6 +15,15 @@
   publisher={IEEE}
 }
 
+@inproceedings{deng2009imagenet,
+  title={Imagenet: A large-scale hierarchical image database},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={2009 IEEE conference on computer vision and pattern recognition},
+  pages={248--255},
+  year={2009},
+  organization={Ieee}
+}
+
 @Article{dlib09,
   author = {Davis E. King},
   title = {Dlib-ml: A Machine Learning Toolkit},
@@ -32,7 +41,7 @@
     priority = {4},
     title = {{The OpenCV Library}},
     year = {2000}
-}      
+}
 
 @inproceedings{sklearn_api,
   author    = {Lars Buitinck and Gilles Louppe and Mathieu Blondel and
@@ -69,7 +78,7 @@
    month={Jun}
 }
 @misc{simonyan2015deep,
-      title={Very Deep Convolutional Networks for Large-Scale Image Recognition}, 
+      title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
       author={Karen Simonyan and Andrew Zisserman},
       year={2015},
       eprint={1409.1556},
