--- a/DeepFakes/bibliography.bib
+++ b/DeepFakes/bibliography.bib
@@ -15,6 +15,14 @@
   publisher={IEEE}
 }
 
+@article{rossler2018faceforensics,
+  title={Faceforensics: A large-scale video dataset for forgery detection in human faces},
+  author={R{\"o}ssler, Andreas and Cozzolino, Davide and Verdoliva, Luisa and Riess, Christian and Thies, Justus and Nie{\ss}ner, Matthias},
+  journal={arXiv preprint arXiv:1803.09179},
+  year={2018}
+}
+
+
 @inproceedings{deng2009imagenet,
   title={Imagenet: A large-scale hierarchical image database},
   author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
