Minor fixes in report

--- a/DeepFakes/report.tex
+++ b/DeepFakes/report.tex
@@ -187,14 +187,14 @@ As our last attempt, we aimed to fine-tune a pre-trained deep neural network. We
 \begin{enumerate}
   \item We loaded a CNN pre-trained on the ImageNet database \citep{deng2009imagenet}.  We tested several well-known models such as VGG19, ResNet50, InceptionV3, XceptionNet...
   \item We dropped the top layers that act as a classifier, and put a small fully connected model of our choosing instead.
-  \item We train \textbf{only the top layers} on our dataset for a few epochs, so that the weights are correctly initialized and are not random. This is done to avoid disturbing the previously tuned weights of the base model.
-  \item \textbf{We unfreeze the last convolutional block of the base model} and train with a small learning rate to perform the actual fine-tuning of the network. We don't unfreeze the whole network because the initial layers act as a coarse feature extractor, and our hypothesis was that the images on ImageNet share the same lower level features as our images. It is only on the last layers of the network that features close to our deepfake detection problem are learned, and that is where we put our efforts. Moreover, if we trained the whole network we would almost certainly incur in overfitting, since we have a very limited quantity of training data.
+  \item We trained \textbf{only the top layers} on our dataset for a few epochs, so that the weights are correctly initialized and are not random. This is done to avoid disturbing the previously tuned weights of the base model.
+  \item \textbf{We unfroze the last convolutional block of the base model} and trained with a small learning rate to perform the actual fine-tuning of the network. We don't unfreeze the whole network because the initial layers act as a coarse feature extractor, and our hypothesis was that the images on ImageNet share the same lower level features as our images. It is only on the last layers of the network that features close to our deepfake detection problem are learned, and that is where we put our efforts. Moreover, if we trained the whole network we would almost certainly incur in overfitting, since we have a very limited quantity of training data.
 \end{enumerate}
 
 We retain the random data augmentation technique from previous attempts, but we do not consider a validation set in this case, to try and make the most out of our few training examples. After some tries, the best configuration found was as follows:
 
 \begin{itemize}
-  \item The chosen base model was the VGG19 network \citep{simonyan2015deep}. We needed to add a preliminary preprocessing step to accomodate the images to VGG19's expectations (using the function \texttt{vgg19.preprocess\_input}).
+  \item The chosen base model was the VGG19 network \citep{simonyan2015deep}. We needed to add a preliminary preprocessing step to accommodate the images to VGG19's expectations (using the function \texttt{vgg19.preprocess\_input}).
   \item The top model chosen was a small model consisting on two fully connected layers with ReLu activation and 512 and 256 units respectively, with a Dropout layer of $0.25$ after the first one and another of $0.5$ after the second one. The Dropout layers are regularizing layers that ``turn off'' a fraction of the neurons during training, to force the model to learn more relevant features. At the end we put a Dense layer with one unit and sigmoid activation to obtain the probabilities of fake and real.
   \item We trained the top model for 3 epochs, and then unfroze the last convolutional block of VGG19 and trained for 15 more epochs, in this case using the SGD optimizer with a learning rate of $5\cdot 10^{-4}$.
 \end{itemize}
